tests/reference/asr_preprocess-cpp_err2-aa1ccd3.stderr
C preprocessor error: Unexpected token '/' in factor()
 --> tests/errors/cpp_err2.f90:1:9
  |
1 | program cpp_err2
  |         ^^^ 
